# napari-manual-transforms

./: LICENSE  README.md  example.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_manual_transforms/: __init__.py  _model.py  _tform_widget.py  _util.py  _widget.py  napari.yaml
src/napari_manual_transforms/_tests/: test_widget.py
tests/: test_transformation_model.py  test_transformation_model_invalid_inputs.py  test_widget.py
