[metadata]
name = napari_manual_transforms
description = Interface to manually edit layer affine transforms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/napari-manual-transforms
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/tlambert03/napari-manual-transforms/issues
    Documentation = https://github.com/tlambert03/napari-manual-transforms#README.md
    Source Code = https://github.com/tlambert03/napari-manual-transforms
    User Support = https://github.com/tlambert03/napari-manual-transforms/issues

[options]
packages = find:
install_requires =
    magicgui
    napari
    numpy
    qtpy
    scipy
    vispy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-manual-transforms = napari_manual_transforms:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
